# Lesson_5_sqlcpp

Task_1/: CMakeLists.txt  main.cpp
